# protogen_app_template

./: CMakeLists.txt  ProtogenAppTest.cpp
src/: ProtogenAppTest.cpp
